--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center" id="welcome-section">
-      <img src="c:\Users\L E N O V O\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\AB1A4D0DD4D48A2BA1077C4494791306\WhatsApp Image 2025-07-25 at 08.10.20_2561f3bf.jpg" alt="Jovan Lionel Georgio" width="200" class="rounded-circle img-thumbnail" />
+      <img src="https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2Fservants-of-the-labyrinth-v0-s7iesqb32uv91.jpg%3Fwidth%3D640%26crop%3Dsmart%26auto%3Dwebp%26s%3D877e9f57a2742b9809e49e65caa351b9dc69a235" alt="gambar" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-3" style="color: rgb(0, 0, 0);">muchammad zayyan aqeel</h1> 
       <p class="lead">SMKN 5 MALANG | XI RPL 3</p>
       <a href="https://github.com/iyan1038" target="_blank" class="btn btn-dark btn-github" id="profile-link">Follow my GitHub <i class="bi bi-github"></i></a>
