--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="col-md-4">
             <p>saya adalah siwa smkn 5 malang jurusan rpl kelas 2</p>
           </div>
-          <div class="c:\Users\L E N O V O\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\AB1A4D0DD4D48A2BA1077C4494791306\WhatsApp Image 2025-07-25 at 08.10.20_2561f3bf.jpg" width="200" class="rounded-circle img-thumbnail"></center></div>
+          <div class="https://i.ytimg.com/vi/OBP_Lbq5VR0/maxresdefault.jpg"></center></div>
           <div class="col-md-4">
             <p></p>
           </div>
