--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center" id="welcome-section">
-      <img src="https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2Fservants-of-the-labyrinth-v0-s7iesqb32uv91.jpg%3Fwidth%3D640%26crop%3Dsmart%26auto%3Dwebp%26s%3D877e9f57a2742b9809e49e65caa351b9dc69a235" alt="gambar" width="200" class="rounded-circle img-thumbnail" />
+      <img src="https://i.ytimg.com/vi/OBP_Lbq5VR0/maxresdefault.jpg" alt="gambar" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-3" style="color: rgb(0, 0, 0);">muchammad zayyan aqeel</h1> 
       <p class="lead">SMKN 5 MALANG | XI RPL 3</p>
       <a href="https://github.com/iyan1038" target="_blank" class="btn btn-dark btn-github" id="profile-link">Follow my GitHub <i class="bi bi-github"></i></a>
@@ -100,21 +100,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="c:\Users\L E N O V O\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\018B59CE1FD616D874AFAD0F44BA338D\WhatsApp Image 2025-07-25 at 09.09.02_2ae6d9ac.jpg" class="d-block w-100" alt="sd">
+      <img src="https://i.ytimg.com/vi/g6OWd__B9nk/hqdefault.jpg" class="d-block w-100" alt="sd">
       <div class="carousel-caption d-none d-md-block">
         <h5>SD ISLAM ALMAARIF 01 SINGOSARI</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="c:\Users\L E N O V O\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\242C100DC94F871B6D7215B868A875F8\WhatsApp Image 2025-07-25 at 09.09.03_d46e4281.jpg" class="d-block w-100" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjvCCkKvXVQTd-6mwobJYKRaydUd5ethZtcA&s" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>MTS TERPADU AROIHAN LAWANG</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="c:\Users\L E N O V O\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\944BDD9636749A0801C39B6E449DBEDC\WhatsApp Image 2025-07-25 at 09.09.03_da68bd30.jpg" class="d-block w-100" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS39ktOGvLJhjGUvLLYuawA4cFBIM3GRGn8EQ&s" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>SMK NEGERI 5 MALANG</h5>
         <p>Some representative placeholder content for the third slide.</p>
