--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>saya adalah siwa smkn 5 malang jurusan rpl kelas 2</p>
+            <p>saya adalah siswa smkn 5 malang jurusan rpl kelas 2</p>
           </div>
           <div class="https://i.ytimg.com/vi/OBP_Lbq5VR0/maxresdefault.jpg"></center></div>
           <div class="col-md-4">
