--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top" id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top" id="navbar">
       <div class="container">
-        <a class="navbar-brand" href="#"><img width="40" height="40" src="https://img.icons8.com/ios-filled/50/FFFFFF/keybase2.png" alt="keybase2"/> PORTFOLIO</a>
+        <a class="navbar-brand" href="#"><img width="40" height="40" src="https://www.svgrepo.com/show/475654/github-color.svg" alt="keybase2"/> zayyan</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
